added audio / video samples

--- a/sample25.html
+++ b/sample25.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>サウンドの再生</h1>
-  <audio src="sound./sample.mp3" autoplay controls>
+  <audio src="http://www.noiseaddicts.com/samples/3726.mp3" autoplay controls />
     <p>再生されない場合は、audio要素対応ブラウザで表示してください。</p>
   </audio>
 </body>
