--- a/sample26.html
+++ b/sample26.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>動画の再生</h1>
-  <video src="video./sample.mp4" autoplay controls>
+  <video src="http://r16---sn-aiglln7l.googlevideo.com/videoplayback?ratebypass=yes&initcwndbps=4187500&sver=3&mt=1423901318&mm=31&ipbits=0&fexp=907263%2C927622%2C934954%2C943917%2C947225%2C948124%2C952302%2C952605%2C952612%2C952901%2C955301%2C957201%2C959701&id=o-AIpGNC-qg6h13D3m3BubCjwhZaQ8Kniyd7VMp6BJThdG&key=yt5&signature=2865273F1526D8668F00320062BC520F03391D04.174964637514ECBCE1FE50314C9320DAEA20F42F&source=youtube&dur=5085.309&mv=m&pl=24&ms=au&itag=18&upn=rHbFonZVsxU&ip=146.185.29.110&sparams=dur%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Cmm%2Cms%2Cmv%2Cnh%2Cpl%2Cratebypass%2Csource%2Cupn%2Cexpire&expire=1423923069&nh=IgpwcjAzLmxocjE0KgkxMjcuMC4wLjE&title=Global+Capitalism-++February+2015+Monthly+Update" autoplay controls>
     <p>再生されない場合は、video要素対応のブラウザで表示してください。</p>
   </video>
 </body>
