--- a/sample30.html
+++ b/sample30.html
@@ -6,14 +6,14 @@
 </head>
 <body>
   <h1>世界の大陸</h1>
-  <u1>
-    <1i>ユーラシア大陸</1i>
-    <1i>アフリカ大陸</1i>
-    <1i>北アメリカ大陸＜/1i>
-    <1i>南アメリカ大陸</1i>
-    <1i>オーストラリア大陸</1i>
-    <1i>南極大陸</1i>
-  </u1>
+  <ul>
+    <li>ユーラシア大陸</li>
+    <li>アフリカ大陸</li>
+    <li>北アメリカ大陸＜/li>
+    <li>南アメリカ大陸</li>
+    <li>オーストラリア大陸</li>
+    <li>南極大陸</li>
+  </ul>
 </body>
 </html>
   
