--- a/sample32.html
+++ b/sample32.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="ja">
+  <meta charset="UTF-8">
   <title>HTML演習5</title>
 </head>
 <body>
