--- a/sample32.html
+++ b/sample32.html
@@ -9,7 +9,7 @@
   <p>大きく分けて4つの海流があります。</p>
   <dl>
     <dt>黒潮(日本海流)</dt>
-    <dd> フィリピンからくる暖流</dd>
+    <dd> フィリピン近海からくる暖流</dd>
     <dt>対馬海流</dt>
     <dd>沖縄近海から対馬海峡、日本海へ向かう暖流</dd>
     <dt>親潮(千島海流)</dt>
