--- a/sample33.html
+++ b/sample33.html
@@ -15,8 +15,8 @@
     <li>四角いマーカー(その2)</li>
   </ul>
   <ul style="list-style-type: upper-roman">
-    <li>太文字のローマ字(その1)</li>
-    <li>太文字のローマ字(その2)</li>
+    <li>大文字のローマ字(その1)</li>
+    <li>大文字のローマ字(その2)</li>
   </ul>
 </body>
 </html>
