--- a/sample34.html
+++ b/sample34.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta chaset="UTF-8">
+  <meta charset="UTF-8">
   <title>HTML演習5</title>
 </head>
 <body>
