--- a/sample37.html
+++ b/sample37.html
@@ -14,7 +14,7 @@
 <body>
   <h1>ご宿泊料金表</h1>
   <table>
-    <caption>ツインは2名様利用の料金、和室は4名様まで同額料金です。
+    <caption>ツインは2名様利用の料金、和室は4名様まで同額料金です。</caption>
     <thead>
       <tr>
         <th colspan="2"></th>
