--- a/sample37.html
+++ b/sample37.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML演習5</title>
-  <style type="text=/css">
+  <style type="text/css">
     table, tr, td, th {
       border: 2px solid;
       border-collapse: collapse;
