--- a/sample43.html
+++ b/sample43.html
@@ -13,7 +13,7 @@
        <label>ラジオボタン2:
          <input type="radio" name="radio1" value="ラジオ2">
        </label></p>
-    <fieldset><legend>グループ名</label>
+    <fieldset><legend>グループ名</legend>
       <p><label>ラジオボタン3:
            <input type="radio" name="radio2" value="ラジオ3" checked>
          </label>
