--- a/sample44.html
+++ b/sample44.html
@@ -11,7 +11,7 @@
       <label for="room">ベットの種類を選択してください:</label>
       <select id="room" name="room">
         <option selected value="single">シングル</option>
-        <option value="semi>セミダブル</option>
+        <option value="semi">セミダブル</option>
         <option value="double">ダブル</option>
       </select>
     </p>
