--- a/sample45.html
+++ b/sample45.html
@@ -18,12 +18,12 @@
     </p>
     <field set><legend>性別</label>
       <input type="radio" name="radio1" value="male" id="male">
-      <label for="male>男性</label>
+      <label for="male">男性</label>
       <input type="radio" name="radio1" value="female" id="female">
       <label for="female">女性</label>
     </field set>
     <p>
-      <input type="cehckbox" name="news" id="checkbox"
+      <input type="cehckbox" name="news" id="checkbox">
       <label for="checkbox">:お知らせの配信を希望する</label>
     </p>
     <p>
