--- a/sample45.html
+++ b/sample45.html
@@ -16,14 +16,14 @@
     <p>
       <label>お名前:<input type="text" name="uname" size="20"></label>
     </p>
-    <field set><legend>性別</label>
+    <field set><legend>性別</lagend>
       <input type="radio" name="radio1" value="male" id="male">
       <label for="male">男性</label>
       <input type="radio" name="radio1" value="female" id="female">
       <label for="female">女性</label>
     </field set>
     <p>
-      <input type="cehckbox" name="news" id="checkbox">
+      <input type="checkbox" name="news" id="checkbox">
       <label for="checkbox">:お知らせの配信を希望する</label>
     </p>
     <p>
