--- a/sample52.html
+++ b/sample52.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/sample52.css">
+  <link rel="stylesheet" type="text/css" href="../css/sample52.css">
   <title>HTML5演習</title>
 </head>
 <body>
