--- a/sample54.html
+++ b/sample54.html
@@ -9,6 +9,6 @@
   <h1>CSS3の新機能</h1>
   <h2 id="shadow">影付きのテキスト</h2>
   <p><div id="maru"> 角丸ボックス</div></p>
-  <p><div id="ani">アニメーション</div</p>
+  <p><div id="ani">アニメーション</div></p>
 </body>
 </html>
