--- a/sample55.html
+++ b/sample55.html
@@ -17,6 +17,7 @@
   <p id="test02">
     width: 300px;<br>
     padding: 20px 20px 20px 40px;<br>
+    border: 10px ridge #999999;<br>
     margin:50px;
   </p>
 </body>
