--- a/sample56.html
+++ b/sample56.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1>回り込み</h1>
-  <img id="test01"src="../img/endless_summer_wallpaper_ipad.jpg" width="200" height="150">
+  <img id="test01"src="img/endless_summer_wallpaper_ipad.jpg" width="200" height="150">
   <p>Endless Summer Wallpaper</p>
-  <p id="test02"><img src="../img/surfing.jpg" width="200" height="150"></p>
+  <p id="test02"><img src="img/surfing.jpg" width="200" height="150"></p>
   <p>Surfboard Wallpaper</p>
 </body>
 </html>
