--- a/sample62.html
+++ b/sample62.html
@@ -7,8 +7,8 @@
 <body> 
   <p>
   <script>
-    var i = prompt("0から5までの数字を入力してください。","");
-    for(r = 1; r <= i; ++){
+    var i = prompt("0 から 5 までの数字を入力してください","");
+    for(r = 1; r <= i; ++r){
       document.write("" + r +"回目<br>");
     }
   </script>
