--- a/lessons/sample57/sample57.html
+++ b/lessons/sample57/sample57.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/sample57.css">
+    <link rel="stylesheet" type="text/css" href="sample57.css">
     <title>HTML5演習</title>
   </head>
   <body>
