--- a/lessons/sample66/sample66.html
+++ b/lessons/sample66/sample66.html
@@ -1,1 +1,17 @@
-test
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <script>
+    function Scclink(){
+      location.href = "http://www.scc-kk.co.jp/index.html";
+    }
+  </script>
+  <title>HTML5演習</title>
+</head>
+<body>
+  <p>
+    <button type="button" onClick="SccLink()">株式会社SCCへ</button>
+  </p>
+</body>
+</html>
